--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
 	"name": "svelte-template",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev --port 3000",
+		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
@@ -50,8 +49,10 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-storybook": "^0.6.3",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"open-props": "^1.4.5",
 		"postcss": "^8.4.14",
 		"postcss-import": "^14.1.0",
+		"postcss-jit-props": "^1.0.7",
 		"postcss-preset-env": "^7.7.2",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.13",
@@ -61,7 +62,8 @@
 		"svelte-check": "^2.8.0",
 		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.7",
+		"sveltekit-autoimport": "^1.6.9",
+		"tailwindcss": "^3.1.8",
 		"tailwindcss-opentype": "^1.0.0",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
